osd: generalize PGSrub, PGRecovery, PGSnapTrim
This commit will allow PGScrub, PGRecovery, PGSnapTrim
to be created anywhere (e.g. TestMClockClientQueue.cc)

Signed-off-by: Myoungwon Oh <omwmw@sk.com>

--- a/src/test/osd/CMakeLists.txt
+++ b/src/test/osd/CMakeLists.txt
@@ -105,7 +105,7 @@ add_ceph_unittest(unittest_mclock_op_class_queue
   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest_mclock_op_class_queue
 )
 target_link_libraries(unittest_mclock_op_class_queue
-  global osd dmclock
+  global osd dmclock os
 )
 
 # unittest_mclock_client_queue
@@ -116,5 +116,5 @@ add_ceph_unittest(unittest_mclock_client_queue
   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest_mclock_client_queue
 )
 target_link_libraries(unittest_mclock_client_queue
-  global osd dmclock
+  global osd dmclock os
 )
